--- a/source/libs/Makefile.am
+++ b/source/libs/Makefile.am
@@ -1,7 +1,7 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS 		= triangul paragui loki-0.1.6 @revellib@ @SdlSoundDir@ 
+SUBDIRS 		= triangul sdlmm paragui loki-0.1.6  @revellib@ @SdlSoundDir@  
 
-DIST_SUBDIRS= triangul paragui loki-0.1.6 revel sdl_sound 
+DIST_SUBDIRS= triangul sdlmm paragui loki-0.1.6 revel sdl_sound
 
 EXTRA_DIST=$(srcdir)/rand/*
