--- a/source/libs/Makefile.in
+++ b/source/libs/Makefile.in
@@ -376,8 +376,8 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = triangul paragui loki-0.1.6 @revellib@ @SdlSoundDir@ 
-DIST_SUBDIRS = triangul paragui loki-0.1.6 revel sdl_sound 
+SUBDIRS = triangul sdlmm paragui loki-0.1.6  @revellib@ @SdlSoundDir@  
+DIST_SUBDIRS = triangul sdlmm paragui loki-0.1.6 revel sdl_sound
 EXTRA_DIST = $(srcdir)/rand/*
 all: all-recursive
 
