--- a/source/libs/paragui/src/core/Makefile.in
+++ b/source/libs/paragui/src/core/Makefile.in
@@ -105,11 +105,11 @@ LTLIBRARIES = $(noinst_LTLIBRARIES)
 am__DEPENDENCIES_1 =
 libpgcore_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
-am_libpgcore_la_OBJECTS = missing.lo pgdatacontainer.lo \
+am_libpgcore_la_OBJECTS = physfsrwops.lo missing.lo pgdatacontainer.lo \
 	pgapplication.lo pgcolors.lo pgfile.lo pglog.lo pgmain.lo \
 	pgmessageobject.lo pgnavigator.lo pgrectlist.lo \
 	pgsurfacecache.lo pgcolor.lo pgsdleventsupplier.lo \
-	pgsdlscreenupdater.lo
+	pgsdlscreenupdater.lo pgfilearchive.lo
 libpgcore_la_OBJECTS = $(am_libpgcore_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -133,12 +133,12 @@ am__maybe_remake_depfiles = depfiles
 am__depfiles_remade = ./$(DEPDIR)/missing.Plo \
 	./$(DEPDIR)/pgapplication.Plo ./$(DEPDIR)/pgcolor.Plo \
 	./$(DEPDIR)/pgcolors.Plo ./$(DEPDIR)/pgdatacontainer.Plo \
-	./$(DEPDIR)/pgfile.Plo ./$(DEPDIR)/pglog.Plo \
-	./$(DEPDIR)/pgmain.Plo ./$(DEPDIR)/pgmessageobject.Plo \
-	./$(DEPDIR)/pgnavigator.Plo ./$(DEPDIR)/pgrectlist.Plo \
-	./$(DEPDIR)/pgsdleventsupplier.Plo \
+	./$(DEPDIR)/pgfile.Plo ./$(DEPDIR)/pgfilearchive.Plo \
+	./$(DEPDIR)/pglog.Plo ./$(DEPDIR)/pgmain.Plo \
+	./$(DEPDIR)/pgmessageobject.Plo ./$(DEPDIR)/pgnavigator.Plo \
+	./$(DEPDIR)/pgrectlist.Plo ./$(DEPDIR)/pgsdleventsupplier.Plo \
 	./$(DEPDIR)/pgsdlscreenupdater.Plo \
-	./$(DEPDIR)/pgsurfacecache.Plo
+	./$(DEPDIR)/pgsurfacecache.Plo ./$(DEPDIR)/physfsrwops.Plo
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -383,6 +383,7 @@ top_srcdir = @top_srcdir@
 zipfound = @zipfound@
 noinst_LTLIBRARIES = libpgcore.la
 libpgcore_la_SOURCES = \
+	physfsrwops.cpp \
 	missing.cpp \
 	pgdatacontainer.cpp \
 	pgapplication.cpp \
@@ -396,7 +397,8 @@ libpgcore_la_SOURCES = \
 	pgsurfacecache.cpp \
 	pgcolor.cpp \
 	pgsdleventsupplier.cpp \
-	pgsdlscreenupdater.cpp 
+	pgsdlscreenupdater.cpp \
+	pgfilearchive.cpp
 
 libpgcore_la_LIBADD = \
 	$(SDL_LIBS) \
@@ -471,6 +473,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgcolors.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgdatacontainer.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgfile.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgfilearchive.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pglog.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgmain.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgmessageobject.Plo@am__quote@ # am--include-marker
@@ -479,6 +482,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgsdleventsupplier.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgsdlscreenupdater.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgsurfacecache.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/physfsrwops.Plo@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -643,6 +647,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/pgcolors.Plo
 	-rm -f ./$(DEPDIR)/pgdatacontainer.Plo
 	-rm -f ./$(DEPDIR)/pgfile.Plo
+	-rm -f ./$(DEPDIR)/pgfilearchive.Plo
 	-rm -f ./$(DEPDIR)/pglog.Plo
 	-rm -f ./$(DEPDIR)/pgmain.Plo
 	-rm -f ./$(DEPDIR)/pgmessageobject.Plo
@@ -651,6 +656,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/pgsdleventsupplier.Plo
 	-rm -f ./$(DEPDIR)/pgsdlscreenupdater.Plo
 	-rm -f ./$(DEPDIR)/pgsurfacecache.Plo
+	-rm -f ./$(DEPDIR)/physfsrwops.Plo
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -702,6 +708,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/pgcolors.Plo
 	-rm -f ./$(DEPDIR)/pgdatacontainer.Plo
 	-rm -f ./$(DEPDIR)/pgfile.Plo
+	-rm -f ./$(DEPDIR)/pgfilearchive.Plo
 	-rm -f ./$(DEPDIR)/pglog.Plo
 	-rm -f ./$(DEPDIR)/pgmain.Plo
 	-rm -f ./$(DEPDIR)/pgmessageobject.Plo
@@ -710,6 +717,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/pgsdleventsupplier.Plo
 	-rm -f ./$(DEPDIR)/pgsdlscreenupdater.Plo
 	-rm -f ./$(DEPDIR)/pgsurfacecache.Plo
+	-rm -f ./$(DEPDIR)/physfsrwops.Plo
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
