--- a/source/unix/mapeditor/Makefile.in
+++ b/source/unix/mapeditor/Makefile.in
@@ -147,7 +147,7 @@ nodist_asc_mapedit_OBJECTS = edgen.$(OBJEXT) edglobal.$(OBJEXT) \
 	weaponrangelayer.$(OBJEXT) unitcostcalculator-pbp.$(OBJEXT)
 asc_mapedit_OBJECTS = $(nodist_asc_mapedit_OBJECTS)
 am__DEPENDENCIES_1 =
-asc_mapedit_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
+asc_mapedit_DEPENDENCIES =  \
 	$(top_builddir)/source/libs/triangul/libtriangul.la \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
@@ -161,6 +161,7 @@ asc_mapedit_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
 	$(top_builddir)/source/dialogs/libmapeddialogs.la \
 	$(top_builddir)/source/widgets/libwidgets.la \
 	$(top_builddir)/source/libs/paragui/src/libparagui.la \
+	$(top_builddir)/source/sdl/libsdl.la \
 	$(top_builddir)/source/tasks/libtaskcore.la \
 	$(top_builddir)/source/lua/libluainterfacemaped.la \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
@@ -503,7 +504,7 @@ package.cpp packagemanager.cpp packagerepository.cpp dataversioncheck.cpp i18n.c
 accessconstraints-editor.cpp unitcostcalculator-standard.cpp weaponrangelayer.cpp \
 unitcostcalculator-pbp.cpp
 
-asc_mapedit_LDADD = $(top_builddir)/source/sdl/libsdl.la \
+asc_mapedit_LDADD = \
 $(top_builddir)/source/libs/triangul/libtriangul.la $(BZIP2_LIBS) \
 $(SIGC_LIBS) $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
 $(top_builddir)/source/util/libutil.la  \
@@ -514,6 +515,7 @@ $(top_builddir)/source/actions/libmapactions.la  \
 $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/libdialogs.la \
 $(top_builddir)/source/dialogs/libmapeddialogs.la  $(top_builddir)/source/widgets/libwidgets.la \
 $(top_builddir)/source/libs/paragui/src/libparagui.la \
+$(top_builddir)/source/sdl/libsdl.la \
 $(top_builddir)/source/tasks/libtaskcore.la \
 $(top_builddir)/source/lua/libluainterfacemaped.la $(LOKI_LIBS) $(SDL_LIBS) $(FREETYPE_LIBS) $(BOOST_LIBS) $(WX_LIBS)
 
