--- a/Makefile.in
+++ b/Makefile.in
@@ -190,7 +190,7 @@ am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/asc.appdata.xml.in \
 	$(srcdir)/asc.spec.in $(srcdir)/asc.suse.spec.in \
 	$(srcdir)/config.h.in $(srcdir)/getmusic.in AUTHORS COPYING \
 	ChangeLog INSTALL README TODO compile config.guess config.sub \
-	depcomp install-sh ltmain.sh missing mkinstalldirs
+	install-sh ltmain.sh missing mkinstalldirs
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
