--- a/source/unix/mapeditor/Makefile.am
+++ b/source/unix/mapeditor/Makefile.am
@@ -31,7 +31,7 @@ package.cpp packagemanager.cpp packagerepository.cpp dataversioncheck.cpp i18n.c
 accessconstraints-editor.cpp unitcostcalculator-standard.cpp weaponrangelayer.cpp \
 unitcostcalculator-pbp.cpp
 
-asc_mapedit_LDADD   	= $(top_builddir)/source/sdl/libsdl.la \
+asc_mapedit_LDADD   	= \
 $(top_builddir)/source/libs/triangul/libtriangul.la $(BZIP2_LIBS) \
 $(SIGC_LIBS) $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
 $(top_builddir)/source/util/libutil.la  \
@@ -42,6 +42,7 @@ $(top_builddir)/source/actions/libmapactions.la  \
 $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/libdialogs.la \
 $(top_builddir)/source/dialogs/libmapeddialogs.la  $(top_builddir)/source/widgets/libwidgets.la \
 $(top_builddir)/source/libs/paragui/src/libparagui.la \
+$(top_builddir)/source/sdl/libsdl.la \
 $(top_builddir)/source/tasks/libtaskcore.la \
 $(top_builddir)/source/lua/libluainterfacemaped.la $(LOKI_LIBS) $(SDL_LIBS) $(FREETYPE_LIBS) $(BOOST_LIBS) $(WX_LIBS)
 
